--- a/styles/blog-style.css
+++ b/styles/blog-style.css
@@ -1,16 +1,17 @@
 :root{
-   --color-primario: #0d1117;
-   --color-secundario:#f89b29;
-   --color-details: #ff0f7b;
-   --color-body-ligth: rgb(240, 239, 239);
-   --color-gradient: linear-gradient(-45deg, #f89b29 0%, #ff0f7b 100% );
+  --color-primario: #0d1117;
+  --color-secundario:rgba(31,20,157,1);
+  --color-details: rgba(26,221,202,1);
+  --color-body-ligth:#fff;
+  --color-letra: #596169;
+  --color-gradient: linear-gradient(90deg, rgba(31,20,157,1) 5%, rgba(31,130,227,1) 55%, rgba(26,221,202,1) 93%);
 }
 
 
 *{
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+ margin: 0;
+ padding: 0;
+ box-sizing: border-box;
 }
 
 html{
@@ -22,13 +23,14 @@ list-style: none;
 }
 
 a{
-  text-decoration: none;
+ text-decoration: none;
 }
 
+
 body{
-  color: #fff;
+background-color: var(--color-body-ligth);
+  color: var(--color-letra);
   font-family: 'Montserrat', sans-serif;
-  background: var(--color-primario);
   line-height: 1.6em;
   transition: .3s ease all;
 }
@@ -44,19 +46,19 @@ margin: 0;
 /*color selection text*/ 
 
 *::selection {
-  background-color:var(--color-secundario);
+  background-color: #1863c560;
   color:#fff;
 }
 
 /*scrollbar edit*/ 
 
 body::-webkit-scrollbar{
-  width: 10px;
-  background: #383838;
+  width: 12px;
+  background: #cac5c5;
 }
 
 body::-webkit-scrollbar-thumb{
-background: linear-gradient(-45deg, #f89b29 0%, #ff0f7b 100% );
+background: linear-gradient(-45deg, rgba(31,20,157,1) 5%, rgba(31,130,227,1) 55%, rgba(26,221,202,1) 93%);
   border-radius: 5px;
 }
 
@@ -65,7 +67,7 @@ background: linear-gradient(-45deg, #f89b29 0%, #ff0f7b 100% );
 .cursor-dot{
   width: 5px;
   height: 5px;
-  background: linear-gradient(-45deg, #f89b29 0%, #ff0f7b 100% );
+  background: linear-gradient(90deg, rgb(8, 195, 228) 5%, rgba(31,130,227,1) 55%, rgba(26,221,202,1) 93%);
 }
 
 .cursor-outline{
@@ -92,15 +94,15 @@ position: fixed;
 bottom: 100px;
 right: 20px;
 padding: 15px 20px;
-background:linear-gradient(-45deg, #f89b29 0%, #ff0f7b 100% );
-color: white;
-border: 1px solid white;
+background:var(--color-letra);
+color: #f4f6fa;
+border: none;
 border-radius: 50%;
 cursor: pointer;
 transform: translateX(200px);
 transition: 0.5s;
 z-index: 999;
-box-shadow: 0 5px 10px rgb(0, 0, 0);
+box-shadow: 0 0px 10px rgb(0, 0, 0, 0.5);
 }
 
 .btn-scrolltop-on {
@@ -110,102 +112,113 @@ transform: translateX(0);
 /*header*/ 
 
 #header{
-   position: fixed !important;
-   width: 100%;
-   z-index: 10;
-   font-weight: 400;
-   transition: 0.2s linear 0.2s;
+background-color: var(--color-body-ligth);
+  position: fixed !important;
+  width: 100%;
+  z-index: 10;
+  font-weight: 400;
+  transition: 0.2s linear 0.2s;
+  box-shadow: 0 0px 5px rgb(0, 0, 0, 0.5);
 }
 
 #header.solid{
-   background-color: #010409;
-   box-shadow: 0 0 0.3em #f89b29,0 0 0.6em #ff0f7b; 
+  
+box-shadow: 0 2px 10px rgb(0, 0, 0, 0.5); 
 }
- 
+
 #header.off{
-   transform: translateY(-200px)
+  transform: translateY(-200px)
 }
 
 /*navbar*/
 
-.logo{
-   width: 3em;
+.sr-only {
+position: absolute;
+width: 1px;
+height: 1px;
+padding: 0;
+margin: -1px;
+overflow: hidden;
+clip: rect(0, 0, 0, 0);
+border: 0;
 }
 
-.nav-link{
-   color: rgb(255, 255, 255);
+.logo{
+  width: 3em;
 }
+
 
 .nav-link:hover::after{
-   opacity: 0.8;
-   transition: all 0.6s ease 0s;
+  opacity: 0.8;
+  transition: all 0.6s ease 0s;
 }
 
 .nav-item a{
-   position: relative;
+  position: relative;
 }
 
 .nav-item a::after{
-   content: "";
-   background:linear-gradient(-45deg, #f89b29 0%, #ff0f7b 100% );
-   position: absolute;
-   left: 0;
-   top:80%;
-   width: 100%;
-   height: 2px;
-   opacity: 0;
+  content: "";
+background: linear-gradient(90deg, rgba(31,20,157,1) 5%, rgba(31,130,227,1) 55%, rgba(26,221,202,1) 93%);
+  position: absolute;
+  left: 0;
+  top:80%;
+  width: 100%;
+  height: 2px;
+  opacity: 0;
+  transition: all 0.6s ease;
 }
+
+#a-inicio::after{
+content: "";
+background: linear-gradient(90deg, rgba(31,20,157,1) 5%, rgba(31,130,227,1) 55%, rgba(26,221,202,1) 93%);
+  position: absolute;
+  left: 0;
+  top:80%;
+  width: 100%;
+  height: 2px;
+  opacity: 1;
+}
+
 .navbar-toggler {
-   border:none;
-   background:linear-gradient(-45deg, #f89b29 0%, #ff0f7b 100% );
+  border:none;
+  
 }
 
 .navbar-toggler:focus {
-   outline: none;
-   box-shadow: none;
-}
-
-.navbar-brand{
-   padding-left: 60px;
-}
- 
-.offcanvas{
-   background-color: var(--color-primario);
-}
- 
-.offcanvas-title{
-   font-size: 1.2em;
+  outline: none;
+  box-shadow: none;
 }
 
 .offcanvas-title img{
-  color: #f1f1f1;
   width: 3em;
 }
- 
-.offcanvas-title:hover,
+
 .nav-link:hover{
-   color:#f1f1f1 ;
+
+color:  rgba(31,130,227,1);
 }
 
 .d-lg-none a{
- color: #f1f1f1;
+color: var(--color-letra);
 }
- 
+
 .in :hover{
-  color: #2f5ec5;
+color: #2f5ec5;
 }
 
 .facebook :hover{
-  color: #3b5998;
+color: #3b5998;
 }
 
 .wpp :hover{
-  color:#25D366;
+color:#25D366;
 }
 
 .inst :hover{
-  color:rgb(255, 0, 200)
+color:rgb(255, 0, 200)
 }
+
 
 
 .titulo{
@@ -221,13 +234,10 @@ transform: translateX(0);
 }
 
 
-footer hr{
-   margin-left: 25%;
-   width: 50%;
-}
+
 
 .cssbuttons-io-button {
-   background-image: linear-gradient(-45deg, #f89b29 0%, #ff0f7b 100% );
+   background-image: linear-gradient(-45deg, rgba(31,20,157,1) 5%, rgba(31,130,227,1) 55%, rgba(26,221,202,1) 93%);
    color: white;
    font-family: inherit;
    padding: 0.35em;
@@ -245,7 +255,7 @@ footer hr{
    cursor: pointer;
    text-transform: uppercase;
    font-weight: 500;
-   box-shadow: 0 0 0.25em #f89b29,0 0 0.25em #ff0f7b;
+   box-shadow: 0 0px 5px rgb(0, 0, 0);
    transition: all 0.6s cubic-bezier(0.23, 1, 0.320, 1);
  }
  
@@ -291,78 +301,92 @@ footer hr{
     
   }
 /*footer*/
+
 footer{
-  color: #f1f1f1;
-  box-shadow: 0px 0px 8px rgb(0, 0, 0);
+  background-color: #1e2832;
+  color:#8a949d;
 }
 
-.foot{
-  text-align: center;
+
+footer img{
+  display: flex;
+  width: 6em;
+  margin: auto;
 }
 
-.foot{
+.footer-main{
+  display: flex;
   align-items: center;
 }
 
-footer img{
-  width: 6em;
+#f-contact .wps{
+  color: var(--color-body-ligth);
+  background-color: #16a359;
+  border: none;
+  font-weight: 400;
+    padding: 7px;
+    border-radius: 25px;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
 }
 
-.link2 a{
-  color: #f1f1f1;
+#f-contact a{
+  display:flex;
+  padding: 10px 0 ;
+  color: #8a949d;
   transition: .2s;
 }
 
+#linkf h5{
+  color: var(--color-letra) !important;
+}
 
-.link2 a:hover{
-  background: linear-gradient(-45deg, #f89b29 0%, #ff0f7b 100% );
+.footer-copy{
+  background-color: #1c242d;
+}
+
+.footer-copy .col-md-12{
+  display: flex;
+  justify-content: center;
+  padding-top: 15px ;
+}
+/*edition h*/ 
+
+
+h3{
+    font-size: 2em;
+    font-weight: 400;
+}
+
+h4{
+  display:inline-block;
+  background: linear-gradient(-30deg, rgba(31,20,157,1) 5%, rgba(31,130,227,1) 55%, rgba(26,221,202,1) 93%);
+    
+
+  -webkit-text-fill-color: transparent;
+  -webkit-background-clip: text;
+}
+
+hr{
+    width: 50%;
+    color:  var(--color-details);
+    opacity: 0.6;
+}
+
+.intro hr,
+.meet hr,
+#blog hr
+{
+  margin-left: 25%;
 }
 
 
- 
- .copyright{
-     display: flex;
-     justify-content: space-between;
-     align-content: center;
-     text-align: center;
- }
- 
- /*edition h*/ 
- 
- 
- 
- h4, h5,
- .link2 a:hover{
-   display:inline-block;
-   background: linear-gradient(-45deg, #f89b29 0%, #ff0f7b 100% );
-     
- 
-   -webkit-text-fill-color: transparent;
-   -webkit-background-clip: text;
- }
- 
- hr{
-     width: 50%;
-     color:  var(--color-secundario);
-     opacity: 0.6;
- }
- 
- .intro hr,
- .meet hr,
- .plus hr{
-   margin-left: 25%;
- }
- 
- footer hr{
-     margin-left: 25%;
-     width: 50%;
- }
- 
- /*transition buttom*/
- 
- button{
-   transition: all 1.1s;
- }
+/*transition buttom*/
+
+button{
+  transition: all 1.1s;
+}
  
  /*media*/ 
  
