--- a/styles/blog.css
+++ b/styles/blog.css
@@ -1,10 +1,11 @@
 :root{
-   --color-primario: #0d1117;
-   --color-secundario:#f89b29;
-   --color-details: #ff0f7b;
-   --color-body-ligth: rgb(240, 239, 239);
-   --color-gradient: linear-gradient(-45deg, #f89b29 0%, #ff0f7b 100% );
- }
+    --color-primario: #0d1117;
+    --color-secundario:rgba(31,20,157,1);
+    --color-details: rgba(26,221,202,1);
+    --color-body-ligth:#fff;
+    --color-letra: #596169;
+    --color-gradient: linear-gradient(90deg, rgba(31,20,157,1) 5%, rgba(31,130,227,1) 55%, rgba(26,221,202,1) 93%);
+}
 
 
 *{
@@ -25,362 +26,358 @@ a{
    text-decoration: none;
 }
 
+
 body{
-   color: #fff;
-   font-family: 'Montserrat', sans-serif;
-   background: var(--color-primario);
-   line-height: 1.6em;
-   transition: .3s ease all;
+  background-color: var(--color-body-ligth);
+    color: var(--color-letra);
+    font-family: 'Montserrat', sans-serif;
+    line-height: 1.6em;
+    transition: .3s ease all;
 }
 
 /*delete select number input*/ 
 
 input[type=number]::-webkit-inner-spin-button, 
 input[type=number]::-webkit-outer-spin-button { 
- -webkit-appearance: none; 
- margin: 0; 
+  -webkit-appearance: none; 
+  margin: 0; 
 }
 
 /*color selection text*/ 
 
 *::selection {
-   background-color:var(--color-secundario);
-   color:#fff;
+    background-color: #1863c560;
+    color:#fff;
 }
 
 /*scrollbar edit*/ 
 
 body::-webkit-scrollbar{
-   width: 10px;
-   background: #383838;
+    width: 12px;
+    background: #cac5c5;
 }
 
 body::-webkit-scrollbar-thumb{
-   background: linear-gradient(-45deg, #f89b29 0%, #ff0f7b 100% );
-   border-radius: 5px;
+  background: linear-gradient(-45deg, rgba(31,20,157,1) 5%, rgba(31,130,227,1) 55%, rgba(26,221,202,1) 93%);
+    border-radius: 5px;
 }
 
 /*cursor*/
 
 .cursor-dot{
-   width: 5px;
-   height: 5px;
-   background: linear-gradient(-45deg, #f89b29 0%, #ff0f7b 100% );
+    width: 5px;
+    height: 5px;
+    background: linear-gradient(90deg, rgb(8, 195, 228) 5%, rgba(31,130,227,1) 55%, rgba(26,221,202,1) 93%);
 }
 
 .cursor-outline{
-   width: 30px;
-   height: 30px;
-   border: 1px solid var(--color-details); 
+    width: 30px;
+    height: 30px;
+    border: 1px solid  var(--color-details);
 }
 
 .cursor-dot,
 .cursor-outline{
-   position: fixed;
-   top: 0;
-   left: 0;
-   transform: translate(-50%, -50%);
-   border-radius: 50%;
-   z-index: 15;
-   pointer-events: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    transform: translate(-50%, -50%);
+    border-radius: 50%;
+    z-index: 15;
+    pointer-events: none;
 }
 
 /*btn scroll top*/ 
 
 .btn-scrolltop {
- position: fixed;
- bottom: 100px;
- right: 20px;
- padding: 15px 20px;
- background:linear-gradient(-45deg, #f89b29 0%, #ff0f7b 100% );
- color: white;
- border: 1px solid white;
- border-radius: 50%;
- cursor: pointer;
- transform: translateX(200px);
- transition: 0.5s;
- z-index: 999;
- box-shadow: 0 5px 10px rgb(0, 0, 0);
+  position: fixed;
+  bottom: 100px;
+  right: 20px;
+  padding: 15px 20px;
+  background:var(--color-letra);
+  color: #f4f6fa;
+  border: none;
+  border-radius: 50%;
+  cursor: pointer;
+  transform: translateX(200px);
+  transition: 0.5s;
+  z-index: 999;
+  box-shadow: 0 0px 10px rgb(0, 0, 0, 0.5);
 }
 
 .btn-scrolltop-on {
- transform: translateX(0);
+  transform: translateX(0);
 }
 
 /*header*/ 
 
 #header{
-   position: fixed !important;
-   width: 100%;
-   z-index: 10;
-   font-weight: 400;
-   transition: 0.2s linear 0.2s;
-}
-
-#header.solid{
-   background-color: #010409;
-   box-shadow: 0 0 0.3em #f89b29,0 0 0.6em #ff0f7b; 
-}
- 
-#header.off{
-   transform: translateY(-200px)
-}
-
-#fondo{
- color: #f1f1f1;
-}
-/*navbar*/
-
-.logo{
-   width: 3em;
-}
-
-.nav-link{
-   color: rgb(255, 255, 255);
-}
-
-.nav-link:hover::after{
-   opacity: 0.8;
-   transition: all 0.6s ease 0s;
-}
-
-.nav-item a{
-   position: relative;
-}
-
-.nav-item a::after{
-   content: "";
-   background:linear-gradient(-45deg, #f89b29 0%, #ff0f7b 100% );
-   position: absolute;
-   left: 0;
-   top:80%;
-   width: 100%;
-   height: 2px;
-   opacity: 0;
-}
-
-#a-blog::after{
+    background-color: var(--color-body-ligth);
+      position: fixed !important;
+      width: 100%;
+      z-index: 10;
+      font-weight: 400;
+      transition: 0.2s linear 0.2s;
+      box-shadow: 0 0px 5px rgb(0, 0, 0, 0.5);
+  }
+  
+  #header.solid{
+      
+    box-shadow: 0 2px 10px rgb(0, 0, 0, 0.5); 
+  }
+    
+  #header.off{
+      transform: translateY(-200px)
+  }
+  
+  /*navbar*/
+  
+  .sr-only {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    padding: 0;
+    margin: -1px;
+    overflow: hidden;
+    clip: rect(0, 0, 0, 0);
+    border: 0;
+  }
+  
+  .logo{
+      width: 3em;
+  }
+  
+  
+  .nav-link:hover::after{
+      opacity: 0.8;
+      transition: all 0.6s ease 0s;
+  }
+  
+  .nav-item a{
+      position: relative;
+  }
+  
+  .nav-item a::after{
       content: "";
-      background:linear-gradient(-45deg, #f89b29 0%, #ff0f7b 100% );
+  background: linear-gradient(90deg, rgba(31,20,157,1) 5%, rgba(31,130,227,1) 55%, rgba(26,221,202,1) 93%);
+      position: absolute;
+      left: 0;
+      top:80%;
+      width: 100%;
+      height: 2px;
+      opacity: 0;
+      transition: all 0.6s ease;
+  }
+  
+  #a-blog::after{
+    content: "";
+    background: linear-gradient(90deg, rgba(31,20,157,1) 5%, rgba(31,130,227,1) 55%, rgba(26,221,202,1) 93%);
       position: absolute;
       left: 0;
       top:80%;
       width: 100%;
       height: 2px;
       opacity: 1;
-}
-
-.navbar-toggler {
-   border:none;
-   background:linear-gradient(-45deg, #f89b29 0%, #ff0f7b 100% );
-}
-
-.navbar-toggler:focus {
-   outline: none;
-   box-shadow: none;
-}
-
-.navbar-brand{
-   padding-left: 60px;
-}
- 
-.offcanvas{
-   background-color: var(--color-primario);
-}
- 
-.offcanvas-title{
-   font-size: 1.2em;
-}
-
-.offcanvas-title img{
-   color: #f1f1f1;
-   width: 3em;
-}
- 
-.offcanvas-title:hover,
-.nav-link:hover{
-   color:#f1f1f1;
-}
-
-.d-lg-none a{
- color: #f1f1f1;
-}
- 
-.in :hover{
-   color: #2f5ec5;
- }
- 
- .facebook :hover{
-   color: #3b5998;
- }
- 
- .wpp :hover{
-   color:#25D366;
- }
- 
- .inst :hover{
-   color:rgb(255, 0, 200)
- }
+  }
+  
+  .navbar-toggler {
+      border:none;
+      
+  }
+  
+  .navbar-toggler:focus {
+      outline: none;
+      box-shadow: none;
+  }
+  
+  .offcanvas-title img{
+      width: 3em;
+  }
+  
+  .nav-link:hover{
+    
+    color:  rgba(31,130,227,1);
+  }
+  
+  .d-lg-none a{
+    color: var(--color-letra);
+  }
+    
+  .in :hover{
+    color: #2f5ec5;
+  }
+  
+  .facebook :hover{
+    color: #3b5998;
+  }
+  
+  .wpp :hover{
+    color:#25D366;
+  }
+  
+  .inst :hover{
+    color:rgb(255, 0, 200)
+  }
 
 /*banner*/ 
 
 #bannertop {
-min-height: 45.5vh;
-max-height: 95vh;
-padding-top: 10vh;
-display: flex;
-align-items: center;
-text-align: center;
-background-image: url(/assets/sol.png);
-background-position: right;
-background-repeat: no-repeat;
-background-size: contain;
-}
-
-#bannertop img{
- max-width: 75%;
-}
-
-#bannertop h1{
-   font-size: 3.6em;
-   font-weight: 800;
-   line-height: 1.2em;
-}
-
-#bannertop h3{
-   font-weight: 300;
-   font-size: 24px;
-}
-
-/*div hijo del banner*/
-
-#fondo {
-   text-align: center;
-   opacity: 0;
-   animation-name: aparicion;
-   animation-duration: 1s;
-   animation-delay: 0.3s;
-   animation-fill-mode: forwards;
-}
-
-@keyframes aparicion {
-   0%{
-     opacity: 0;
-     transform: scale(1.4) translateY(-20px);
-   }
-
-   100%{
-     opacity: 1;
-     transform: scale(1) translateY(0);
-   }
-}
-
-/*cartas*/
-.articulos .col-lg-3{
-   display: flex;
-   justify-content: center;
-   margin-bottom: 10px;
-   
-}
-
- 
-
-/*carta 2*/
-
-.card {
-   padding: 20px;
-   max-width: 350px;
-   background: var(--color-primario);
-   transition: 0.4s;
-   color: #f1f1f1;
-   box-shadow: 0 5px 10px rgb(0, 0, 0);
-
- }
- 
- .card:hover {
-   translate: 0 -10px;
- }
- 
- .card-title {
-   font-size: 1.7em;
-   font-weight: 600;
-   margin: 15px 0 0 10px;
- }
- 
- .card-image img{
-   width: 100%;
-   border-radius: 15px;
- }
- 
- .card-body {
-   margin: 13px 0 0 10px;
- }
- 
- .card-footer {
-   float: left;
-   margin: 28px 0 0 18px;
- }
-
-
-
-/*footer*/
-footer{
-   color: #f1f1f1;
-   box-shadow: 0px 0px 8px rgb(0, 0, 0);
- }
- 
- .foot{
-   text-align: center;
- }
- 
- .foot{
-   align-items: center;
- }
- 
- footer img{
-   width: 6em;
- }
- 
- .link2 a{
-   color: #f1f1f1;
-   transition: .2s;
- }
- 
- 
- .link2 a:hover{
-   background: linear-gradient(-45deg, #f89b29 0%, #ff0f7b 100% );
- }
- 
- 
-.queres{
-   box-shadow: 0 5px 10px rgb(0, 0, 0);
-   border-radius: 14px;
-   width: 90%;
-   margin: auto;
-}
-
-.queres p{
-   padding: 8px;
-}
-
-  
-  .copyright{
+    color: var(--color-body-ligth);
+    min-height: 45vh;
+    padding-top: 10vh;
       display: flex;
-      justify-content: space-between;
-      align-content: center;
+      align-items: center;
       text-align: center;
+      background: rgb(31,20,157);
+      background: linear-gradient(90deg, rgba(31,20,157,1) 5%, rgba(31,130,227,1) 55%, rgba(26,221,202,1) 93%);
+      
   }
   
+  #bannertop img{
+    max-width: 100%;
+  }
+  
+  #bannertop h2{
+      font-size: 3.6em;
+      font-weight: 800;
+      line-height: 1.2em;
+  }
+  
+  #bannertop h3{
+      font-weight: 300;
+      font-size: 24px;
+  }
+  
+  /*div hijo del banner*/
+  
+  #fondo {
+      text-align: center;
+      opacity: 0;
+      animation-name: aparicion;
+      animation-duration: 1s;
+      animation-delay: 0.3s;
+      animation-fill-mode: forwards;
+  }
+  
+  @keyframes aparicion {
+      0%{
+        opacity: 0;
+        transform: scale(1.4) translateY(-20px);
+      }
+  
+      100%{
+        opacity: 1;
+        transform: scale(1) translateY(0);
+      }
+  }
+
+
+  /*cartas*/
+.articulos .col-lg-3{
+    display: flex;
+    justify-content: center;
+    margin-bottom: 10px;
+    
+ }
+ 
+  
+ 
+ /*carta 2*/
+ 
+ .card {
+    padding: 20px;
+    max-width: 350px;
+    background: #1e2832;
+    transition: 0.4s;
+    color: #f1f1f1;
+    box-shadow: 0 5px 10px rgb(0, 0, 0);
+ 
+  }
+  
+  .card:hover {
+    translate: 0 -10px;
+  }
+  
+  .card-title {
+    font-size: 1.7em;
+    font-weight: 600;
+    margin: 15px 0 0 10px;
+  }
+  
+  .card-image img{
+    width: 100%;
+    border-radius: 15px;
+  }
+  
+  .card-body {
+    margin: 13px 0 0 10px;
+  }
+  
+  .card-footer {
+    float: left;
+    margin: 28px 0 0 18px;
+  }
+ 
+
+
+  /*footer*/
+footer{
+    background-color: #1e2832;
+    color:#8a949d;
+  }
+  
+  
+  footer img{
+    display: flex;
+    width: 6em;
+    margin: auto;
+  }
+  
+  .footer-main{
+    display: flex;
+    align-items: center;
+  }
+  
+  #f-contact .wps{
+    color: var(--color-body-ligth);
+    background-color: #16a359;
+    border: none;
+    font-weight: 400;
+      padding: 7px;
+      border-radius: 25px;
+      text-align: center;
+      justify-content: center;
+      align-items: center;
+  }
+  
+  #f-contact a{
+    display:flex;
+    padding: 10px 0 ;
+    color: #8a949d;
+    transition: .2s;
+  }
+
+  
+  .footer-copy{
+    background-color: #1c242d;
+  }
+  
+  .footer-copy .col-md-12{
+    display: flex;
+    justify-content: center;
+    padding-top: 15px ;
+  }
   /*edition h*/ 
+  
   
   h3{
       font-size: 2.5em;
-      font-weight: 600 ;
+      font-weight: 600;
   }
   
-  .link2 a:hover{
-      display:inline-block;
-    background: linear-gradient(-45deg, #f89b29 0%, #ff0f7b 100% );
+  h4{
+    display:inline-block;
+    background: linear-gradient(-30deg, rgba(31,20,157,1) 5%, rgba(31,130,227,1) 55%, rgba(26,221,202,1) 93%);
       
   
     -webkit-text-fill-color: transparent;
@@ -389,14 +386,15 @@ footer{
   
   hr{
       width: 50%;
-      color: var(--color-secundario);
+      color:  var(--color-details);
       opacity: 0.6;
   }
   
   
-  footer hr{
-      margin-left: 25%;
-      width: 50%;
+  /*transition buttom*/
+  
+  button{
+    transition: all 1.1s;
   }
   
   /*media*/ 
@@ -406,15 +404,15 @@ footer{
     .cursor-outline{
         display: none;
       }
-
+  
+  
       #bannertop{
-         padding-top: 30vh;
-         background-position: bottom;
-       }
-
+        padding-top: 20vh;
+      }
+  
       .nav-item a::after{
         content: "";
-        background: linear-gradient(-45deg, #f89b29 0%, #ff0f7b 100% );
+        background:linear-gradient(90deg, rgba(31,20,157,1) 5%, rgba(31,130,227,1) 55%, rgba(26,221,202,1) 93%);
         position: absolute;
         left: 0;
         top:80%;
@@ -422,27 +420,29 @@ footer{
         height: 2px;
         opacity: 0;
       }
+
   
       h3{
         font-size: 1.9em;
       }
+      
       #a-blog::after{
-         content: "";
-         background:linear-gradient(-45deg, #f89b29 0%, #ff0f7b 100% );
-         position: absolute;
-         left: 0;
-         top:80%;
-         width: 35%;
-         height: 2px;
-         opacity: 1;
-   }
+        content: "";
+          background:linear-gradient(90deg, rgba(31,20,157,1) 5%, rgba(31,130,227,1) 55%, rgba(26,221,202,1) 93%);
+          position: absolute;
+          left: 0;
+          top:80%;
+          width: 35%;
+          height: 2px;
+          opacity: 1;
+      }
   
   }
   
   @media(max-width:768px){
       .nav-item a::after{
           content: "";
-          background: linear-gradient(-45deg, #f89b29 0%, #ff0f7b 100% );
+          background: linear-gradient(90deg, rgba(31,20,157,1) 5%, rgba(31,130,227,1) 55%, rgba(26,221,202,1) 93%);
           position: absolute;
           left: 0;
           top:80%;
@@ -450,32 +450,24 @@ footer{
           height: 2px;
           opacity: 0;
       }
-
-      #a-blog::after{
-         content: "";
-         background:linear-gradient(-45deg, #f89b29 0%, #ff0f7b 100% );
-         position: absolute;
-         left: 0;
-         top:80%;
-         width: 35%;
-         height: 2px;
-         opacity: 1;
-   }
       .navbar-brand{
         padding-left: 0px;
       }
+
   
-      #bannertop h1{
+      #bannertop h2{
           font-size: 2.4em;
       }
   
       #bannertop{
-        padding-top: 30vh;
-        background-position: bottom;
+        padding-top: 20vh;
       }
-     h3{
+
+  
+      h3{
         font-size: 1.9em;
       }
+
+
     }
- 
   
