--- a/styles/contact.css
+++ b/styles/contact.css
@@ -1,34 +1,37 @@
 :root{
-     --color-primario: #0d1117;
-     --color-secundario:#f89b29;
-     --color-details: #ff0f7b;
-     --color-body-ligth: rgb(240, 239, 239);
-     --color-gradient: linear-gradient(-45deg, #f89b29 0%, #ff0f7b 100% );
+    --color-primario: #0d1117;
+    --color-secundario:rgba(31,20,157,1);
+    --color-details: rgba(26,221,202,1);
+    --color-body-ligth:#fff;
+    --color-letra: #596169;
+    --color-gradient: linear-gradient(90deg, rgba(31,20,157,1) 5%, rgba(31,130,227,1) 55%, rgba(26,221,202,1) 93%);
+    background: linear-gradient
 }
 
 
 *{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+   margin: 0;
+   padding: 0;
+   box-sizing: border-box;
 }
 
 html{
-  scroll-behavior: smooth;
+ scroll-behavior: smooth;
 }
 
 li{
-  list-style: none;
+ list-style: none;
 }
 
 a{
-    text-decoration: none;
+   text-decoration: none;
 }
 
+
 body{
-    color: #fff;
+  background-color: #f4f6fa;
+    color: var(--color-letra);
     font-family: 'Montserrat', sans-serif;
-    background: var(--color-primario);
     line-height: 1.6em;
     transition: .3s ease all;
 }
@@ -44,19 +47,19 @@ input[type=number]::-webkit-outer-spin-button {
 /*color selection text*/ 
 
 *::selection {
-    background-color:var(--color-secundario);
+    background-color: #1863c560;
     color:#fff;
 }
 
 /*scrollbar edit*/ 
 
 body::-webkit-scrollbar{
-    width: 10px;
-    background: #383838;
+    width: 12px;
+    background: #cac5c5;
 }
 
 body::-webkit-scrollbar-thumb{
-  background: linear-gradient(-45deg, #f89b29 0%, #ff0f7b 100% );
+  background: linear-gradient(-45deg, rgba(31,20,157,1) 5%, rgba(31,130,227,1) 55%, rgba(26,221,202,1) 93%);
     border-radius: 5px;
 }
 
@@ -65,7 +68,7 @@ body::-webkit-scrollbar-thumb{
 .cursor-dot{
     width: 5px;
     height: 5px;
-    background: linear-gradient(-45deg, #f89b29 0%, #ff0f7b 100% );
+    background: linear-gradient(90deg, rgb(8, 195, 228) 5%, rgba(31,130,227,1) 55%, rgba(26,221,202,1) 93%);
 }
 
 .cursor-outline{
@@ -92,15 +95,15 @@ body::-webkit-scrollbar-thumb{
   bottom: 100px;
   right: 20px;
   padding: 15px 20px;
-  background:linear-gradient(-45deg, #f89b29 0%, #ff0f7b 100% );
-  color: white;
-  border: 1px solid white;
+  background:var(--color-letra);
+  color: #f4f6fa;
+  border: none;
   border-radius: 50%;
   cursor: pointer;
   transform: translateX(200px);
   transition: 0.5s;
   z-index: 999;
-  box-shadow: 0 5px 10px rgb(0, 0, 0);
+  box-shadow: 0 0px 10px rgb(0, 0, 0, 0.5);
 }
 
 .btn-scrolltop-on {
@@ -110,135 +113,133 @@ body::-webkit-scrollbar-thumb{
 /*header*/ 
 
 #header{
-    position: fixed !important;
-    width: 100%;
-    z-index: 10;
-    font-weight: 400;
-    transition: 0.2s linear 0.2s;
-}
-
-#header.solid{
-    background-color: #010409;
-    box-shadow: 0 0 0.3em #f89b29,0 0 0.6em #ff0f7b; 
-}
+    background-color: var(--color-body-ligth);
+      position: fixed !important;
+      width: 100%;
+      z-index: 10;
+      font-weight: 400;
+      transition: 0.2s linear 0.2s;
+      box-shadow: 0 0px 5px rgb(0, 0, 0, 0.5);
+  }
   
-#header.off{
-    transform: translateY(-200px)
-}
+  #header.solid{
+      
+    box-shadow: 0 2px 10px rgb(0, 0, 0, 0.5); 
+  }
+    
+  #header.off{
+      transform: translateY(-200px)
+  }
 
-/*navbar*/
+  /*navbar*/
 
-.logo{
-    width: 3em;
-}
-
-.nav-link{
-    color: rgb(255, 255, 255);
-}
-
-.nav-link:hover::after{
-    opacity: 0.8;
-    transition: all 0.6s ease 0s;
-}
-
-.nav-item a{
-    position: relative;
-}
-
-.nav-item a::after{
-    content: "";
-    background:linear-gradient(-45deg, #f89b29 0%, #ff0f7b 100% );
+.sr-only {
     position: absolute;
-    left: 0;
-    top:80%;
-    width: 100%;
-    height: 2px;
-    opacity: 0;
-}
-
-
-#a-contact::after{
-  content: "";
-  background:linear-gradient(-45deg, #f89b29 0%, #ff0f7b 100% );
-  position: absolute;
-  left: 0;
-  top:80%;
-  width: 100%;
-  height: 2px;
-  opacity: 1;
-}
-
-.navbar-toggler {
-    border:none;
-    background:linear-gradient(-45deg, #f89b29 0%, #ff0f7b 100% );
-}
-
-.navbar-toggler:focus {
-    outline: none;
-    box-shadow: none;
-}
-
-.navbar-brand{
-    padding-left: 60px;
-}
+    width: 1px;
+    height: 1px;
+    padding: 0;
+    margin: -1px;
+    overflow: hidden;
+    clip: rect(0, 0, 0, 0);
+    border: 0;
+  }
   
-.offcanvas{
-    background-color: var(--color-primario);
-}
+  .logo{
+      width: 3em;
+  }
   
-.offcanvas-title{
-    font-size: 1.2em;
-}
-
-.offcanvas-title img{
-  color: #f1f1f1;
-  width: 3em;
-}
-
-.offcanvas-title:hover,
-.nav-link:hover{
-    color:#f1f1f1 ;
-}
-
-.d-lg-none a{
-  color: #f1f1f1;
-}
   
-.in :hover{
-  color: #2f5ec5;
-}
+  .nav-link:hover::after{
+      opacity: 0.8;
+      transition: all 0.6s ease 0s;
+  }
+  
+  .nav-item a{
+      position: relative;
+  }
+  
+  .nav-item a::after{
+      content: "";
+  background: linear-gradient(90deg, rgba(31,20,157,1) 5%, rgba(31,130,227,1) 55%, rgba(26,221,202,1) 93%);
+      position: absolute;
+      left: 0;
+      top:80%;
+      width: 100%;
+      height: 2px;
+      opacity: 0;
+      transition: all 0.6s ease;
+  }
+  
+  #a-contact::after{
+    content: "";
+    background: linear-gradient(90deg, rgba(31,20,157,1) 5%, rgba(31,130,227,1) 55%, rgba(26,221,202,1) 93%);
+      position: absolute;
+      left: 0;
+      top:80%;
+      width: 100%;
+      height: 2px;
+      opacity: 1;
+  }
+  
+  .navbar-toggler {
+      border:none;
+      
+  }
+  
+  .navbar-toggler:focus {
+      outline: none;
+      box-shadow: none;
+  }
+  
+  .offcanvas-title img{
+      width: 3em;
+  }
+  
+  .nav-link:hover{
+    
+    color:  rgba(31,130,227,1);
+  }
+  
+  .d-lg-none a{
+    color: var(--color-letra);
+  }
+    
+  .in :hover{
+    color: #2f5ec5;
+  }
+  
+  .facebook :hover{
+    color: #3b5998;
+  }
+  
+  .wpp :hover{
+    color:#25D366;
+  }
+  
+  .inst :hover{
+    color:rgb(255, 0, 200)
+  }
+  
 
-.facebook :hover{
-  color: #3b5998;
-}
-
-.wpp :hover{
-  color:#25D366;
-}
-
-.inst :hover{
-  color:rgb(255, 0, 200)
-}
-
-/*banner*/ 
+  /*banner*/ 
 
 #bannertop {
-  min-height: 90vh;
-  padding-top: 10vh;
+  color: var(--color-body-ligth);
+  min-height: 60vh;
+  padding-top: 20vh;
     display: flex;
     align-items: center;
     text-align: center;
-    background-image: url(/assets/Blank.png);
-    background-repeat: no-repeat no-repeat;
-    background-size:contain;
-    background-position: right;
+    background: rgb(31,20,157);
+    background: linear-gradient(90deg, rgba(31,20,157,1) 5%, rgba(31,130,227,1) 55%, rgba(26,221,202,1) 93%);
+    
 }
 
 #bannertop img{
   max-width: 100%;
 }
 
-#bannertop h1{
+#bannertop h2{
     font-size: 3.6em;
     font-weight: 800;
     line-height: 1.2em;
@@ -272,7 +273,11 @@ body::-webkit-scrollbar-thumb{
     }
 }
 
+
+/*formulario*/
+
 /*hablemos*/
+
   
 .hablemos hr{
   width: 40%;
@@ -282,14 +287,14 @@ body::-webkit-scrollbar-thumb{
 
 /*formulario*/
 
-
-#formulario-consulta{
-  padding-top: 22px;
+#form-consulta{
+  display: flex;
+  justify-content: center;
 }
 
+
 input{
-    color: #fff;
-    background-color: #FBFBFB24;
+    background-color: #dee7ef;
     border-radius: 7px;
     height: 60px;
     width: 100%;
@@ -297,7 +302,7 @@ input{
     padding-left: 10px;
     outline: none;
     border: none;
-    box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.781);
+    box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.781);
     transition: all 0.3s cubic-bezier(0.19, 1, 0.22, 1);
 }
 
@@ -317,14 +322,14 @@ textarea:focus {
 }
 
 textarea{
-    color: #fff;
+    
     width: 100%;
     height: 150px;
-    background-color: #FBFBFB24;
+    background-color: #dee7ef;
     border-radius: 7px;
     outline: none;
     border: none;
-    box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.781);
+    box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.781);
     min-height: 150px;
     max-height: 150px;
     padding-left: 10px;
@@ -336,14 +341,12 @@ input, textarea {
   caret-color:var(--color-secundario);
 }
 
-form button,
-.linkt {
-  width: 150px;
+form button {
+  width: 130px;
   height: 60px;
   background: transparent;
   border: 1px solid var(--color-secundario);
   font-weight: bold;
-  color: #ffffff;
   border-radius: 7px;
   cursor: pointer;
   position: relative;
@@ -352,10 +355,11 @@ form button,
   align-items: center;
   overflow: hidden;
   transition: all 0.5s;
+  box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.534);
+
 }
 
-form button span,
-.linkt span {
+form button span {
   transition: all 0.5s;
   z-index: -1;
 }
@@ -366,110 +370,92 @@ form button::before {
   position: absolute;
   width: 0;
   height: 100%;
-  background: linear-gradient(-45deg, #f89b29 0%, #ff0f7b 100% );
+  background: linear-gradient(90deg, rgba(31,130,227,1) 5%, rgba(26,221,202,1) 93%);
   top: 0;
   transform: skewX(35deg);
   transition: all 0.5s;
   z-index: -1;
 }
 
-.linkt::after,
-.linkt::before{
-  content: "";
-  position: absolute;
-  width: 0;
-  height: 100%;
-  background-image: linear-gradient(-45deg, #f89b29 0%, #ff0f7b 100% );
-  top: 0;
-  transform: skewX(35deg);
-  transition: all 0.5s;
-  z-index: -1;
-}
-
-form button::after,
- .linkt::after{
+form button::after{
   left: -20px;
 }
 
-form button::before,
-.linkt::before {
+form button::before{
   right: -20px;
 }
 
-form button:hover::after,
-.linkt:hover::after {
+form button:hover::after{
   width: 50%;
   left: 0;
 }
 
-form button:hover::before,
-.linkt:hover::before {
+form button:hover::before{
   width: 50%;
   right: 0;
 }
 
-#linktree{
-  padding-top: 49px;
-}
-
-.linkt{
-  width: 100%;
-  height: 60px;
-  font-size: 20px;
-  background-color: #FBFBFB24;
-  margin-bottom: 34px;
-}
 
 
 
 /*footer*/
 footer{
-  color: #f1f1f1;
-  box-shadow: 0px 0px 8px rgb(0, 0, 0);
+  background-color: #1e2832;
+  color:#8a949d;
 }
 
-.foot{
-  text-align: center;
+
+footer img{
+  display: flex;
+  width: 6em;
+  margin: auto;
 }
 
-.foot{
+.footer-main{
+  display: flex;
   align-items: center;
 }
 
-footer img{
-  width: 6em;
+#f-contact .wps{
+  color: var(--color-body-ligth);
+  background-color: #16a359;
+  border: none;
+  font-weight: 400;
+    padding: 7px;
+    border-radius: 25px;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
 }
 
-.link2 a{
-  color: #f1f1f1;
+#f-contact a{
+  display:flex;
+  padding: 10px 0 ;
+  color: #8a949d;
   transition: .2s;
 }
 
 
-.link2 a:hover{
-  background: linear-gradient(-45deg, #f89b29 0%, #ff0f7b 100% );
+.footer-copy{
+  background-color: #1c242d;
 }
 
-
-
-.copyright{
-    display: flex;
-    justify-content: space-between;
-    align-content: center;
-    text-align: center;
+.footer-copy .col-md-12{
+  display: flex;
+  justify-content: center;
+  padding-top: 15px ;
 }
-
 /*edition h*/ 
+
 
 h3{
     font-size: 2.5em;
     font-weight: 600;
 }
 
-h4, h5,
-.link2 a:hover{
+h4{
   display:inline-block;
-  background: linear-gradient(-45deg, #f89b29 0%, #ff0f7b 100% );
+  background: linear-gradient(-30deg, rgba(31,20,157,1) 5%, rgba(31,130,227,1) 55%, rgba(26,221,202,1) 93%);
     
 
   -webkit-text-fill-color: transparent;
@@ -478,20 +464,17 @@ h4, h5,
 
 hr{
     width: 50%;
-    color:  var(--color-secundario);
+    color:  var(--color-details);
     opacity: 0.6;
 }
 
 .intro hr,
 .meet hr,
-.plus hr{
+#blog hr
+{
   margin-left: 25%;
 }
 
-footer hr{
-    margin-left: 25%;
-    width: 50%;
-}
 
 /*transition buttom*/
 
@@ -507,9 +490,13 @@ button{
       display: none;
     }
 
+    #bannertop{
+      padding-top: 20vh;
+    }
+
     .nav-item a::after{
       content: "";
-      background: linear-gradient(-45deg, #f89b29 0%, #ff0f7b 100% );
+      background:linear-gradient(90deg, rgba(31,20,157,1) 5%, rgba(31,130,227,1) 55%, rgba(26,221,202,1) 93%);
       position: absolute;
       left: 0;
       top:80%;
@@ -521,25 +508,24 @@ button{
     h3{
       font-size: 1.9em;
     }
-
+    
     #a-contact::after{
       content: "";
-      background:linear-gradient(-45deg, #f89b29 0%, #ff0f7b 100% );
-      position: absolute;
-      left: 0;
-      top:80%;
-      width: 35%;
-      height: 2px;
-      opacity: 1;
+        background:linear-gradient(90deg, rgba(31,20,157,1) 5%, rgba(31,130,227,1) 55%, rgba(26,221,202,1) 93%);
+        position: absolute;
+        left: 0;
+        top:80%;
+        width: 35%;
+        height: 2px;
+        opacity: 1;
     }
-    
 
 }
 
 @media(max-width:768px){
     .nav-item a::after{
         content: "";
-        background: linear-gradient(-45deg, #f89b29 0%, #ff0f7b 100% );
+        background: linear-gradient(90deg, rgba(31,20,157,1) 5%, rgba(31,130,227,1) 55%, rgba(26,221,202,1) 93%);
         position: absolute;
         left: 0;
         top:80%;
@@ -547,32 +533,24 @@ button{
         height: 2px;
         opacity: 0;
     }
-
-    #a-contact::after{
-      content: "";
-      background:linear-gradient(-45deg, #f89b29 0%, #ff0f7b 100% );
-      position: absolute;
-      left: 0;
-      top:80%;
-      width: 35%;
-      height: 2px;
-      opacity: 1;
-    }
     .navbar-brand{
       padding-left: 0px;
     }
 
-    #bannertop h1{
+    #bannertop h2{
         font-size: 2.4em;
     }
 
     #bannertop{
-      padding-top: 10vh;
+      padding-top: 20vh;
     }
-
 
     h3{
       font-size: 1.9em;
     }
-  }
 
+
+  
+
+  
+  }
