--- a/styles/style.css
+++ b/styles/style.css
@@ -295,7 +295,7 @@ background: linear-gradient(90deg, rgba(31,20,157,1) 5%, rgba(31,130,227,1) 55%,
   cursor: pointer;
   text-transform: uppercase;
   font-weight: 500;
-  box-shadow: 0 0px 5px rgb(0, 0, 0);
+  box-shadow: 0 0px 5px rgba(0, 0, 0, 0.37);
   transition: all 0.6s cubic-bezier(0.23, 1, 0.320, 1);
 }
 
@@ -356,6 +356,10 @@ background: linear-gradient(90deg, rgba(31,20,157,1) 5%, rgba(31,130,227,1) 55%,
   text-align: center;
 }
 
+.intro p{
+  font-size: 1.2em; 
+}
+
 
 .center-inicio{
   justify-content: center;
@@ -382,7 +386,7 @@ background: linear-gradient(90deg, rgba(31,20,157,1) 5%, rgba(31,130,227,1) 55%,
   justify-content: center;
   align-items: center;
   margin: auto;
-  box-shadow: 0 0px 10px rgb(0, 0, 0, 0.5);
+  box-shadow: 0 0px 5px rgba(0, 0, 0, 0.37);
   transition: all 0.2s;
 }
 
@@ -417,7 +421,7 @@ background: linear-gradient(90deg, rgba(31,20,157,1) 5%, rgba(31,130,227,1) 55%,
 
 .accordion-button{
   font-size: 0.6em !important;
-  background-color: #ff010100;
+  background-color: #c0212100;
   font-weight: 500;
   background: linear-gradient(180deg, rgba(31,20,157,1) 5%, rgba(31,130,227,1) 55%, rgba(26,221,202,1) 93%);
       
